refactor solution to use Lexer